# buqueue

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/buqueue/: Cargo.toml
crates/buqueue-core/: Cargo.toml
crates/buqueue-core/src/: backend.rs  consumer.rs  delivery.rs  dlq.rs  error.rs  lib.rs  message.rs  prelude.rs  producer.rs  shutdown.rs
crates/buqueue-core/src/core/: delivery.rs  error.rs  message.rs  mod.rs
crates/buqueue-core/src/feature/: dlq.rs  mod.rs
crates/buqueue-core/src/traits/: backend.rs  consumer.rs  mod.rs  producer.rs
crates/buqueue-memory/: Cargo.toml
crates/buqueue-memory/src/: ack.rs  builder.rs  config.rs  consumer.rs  envelope.rs  lib.rs  producer.rs  tests.rs
crates/buqueue-sqs/: Cargo.toml
crates/buqueue-sqs/src/: error.rs  lib.rs
crates/buqueue-sqs/src/backend/: ack.rs  consumer.rs  mod.rs  producer.rs
crates/buqueue-sqs/src/config/: mod.rs
crates/buqueue-sqs/src/tests/: mod.rs
crates/buqueue/src/: lib.rs
