[workspace]
members = [
    "crates/buqueue-core",
]

resolver = "3"

[workspace.package]
edition="2024"

[workspace.dependencies]
buqueue-core = { path = "buqueue-core" }
thiserror = { version = "2.0.18" }
bytes = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all     = "warn"
pedantic = "warn"
