[workspace]
members = [
    "crates/buqueue",
    "crates/buqueue-core",
    "crates/buqueue-memory",
    "crates/buqueue-sqs",
]

resolver = "3"

[workspace.package]
edition="2024"

[workspace.dependencies]
buqueue-core = { path = "crates/buqueue-core" }
buqueue-memory = { path = "crates/buqueue-memory" }
thiserror = { version = "2.0.18" }
bytes = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.44"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
futures = "0.3.32"
uuid = { version = "1.23.0", features = ["v4"] }
tokio-test = "0.4.5"
aws-config = "1.8.16"
aws-sdk-sqs = "1.98.0"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all     = "warn"
pedantic = "warn"
