[package]
name = "buqueue-core"
version = "0.1.0"
edition.workspace = true
description = "Core traits and types for the buqueue message queue abstraction"
license = "MIT"

[dependencies]
thiserror = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
